Fixes Home section spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12659,3 +12659,7 @@ textarea.form-control {
 .contact-text {
   font-size: 1rem;
 }
+
+#home-section {
+  margin-bottom: 7.5rem;
+}
